# sicario-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  install.sh  sicario-security.2026-04-24.private-key.pem  test-vulnerable-code.js  test-vulnerable-code.py
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_request.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/ai-fix-overhaul/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/auth-dashboard-launch-ready/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/pr-scan-workflow/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/sicario-cli-core/: design.md  requirements.md  tasks.md
.sicario/baselines/: 20260425T120459Z.json
.sicario/benchmarks/: benchmark-20260425T120208.json
.sicario/cache/: vuln_cache.db
Formula/: sicario.rb
convex/: package-lock.json  package.json  tsconfig.json
convex/convex/: analytics.ts  auth.ts  deviceAuth.ts  emails.ts  findings.ts  githubApp.ts  githubAppNode.ts  http.ts  memberships.ts  organizations.ts  prChecks.ts  prSastEngine.ts  prSastRules.ts  prScanWorkflow.ts  projects.ts  providerSettings.ts  scans.ts  schema.ts  teams.ts  userProfiles.ts
docs/: TEMPLATE_BACKLOG.md
homebrew-sicario-cli/: README.md
sicario-cli/: Cargo.toml
sicario-cli/.sicario/reports/: owasp_report.json  owasp_report.md
sicario-cli/proptest-regressions/auth/: auth_property_tests.txt
sicario-cli/proptest-regressions/engine/: reachability.txt  sast_engine.txt
sicario-cli/proptest-regressions/scanner/: secret_patterns.txt
sicario-cli/rules/: go.yaml  java.yaml  javascript.yaml  python.yaml  rust.yaml
sicario-cli/rules/go/: crypto.yaml  error_handling.yaml  framework_gin_echo_fiber.yaml  info_leakage.yaml  race_conditions.yaml  sql_cmd_path_ssrf.yaml  tls_config.yaml  xxe.yaml
sicario-cli/rules/java/: command_injection.yaml  crypto.yaml  deserialization.yaml  ldap_injection.yaml  logging_sensitive.yaml  path_traversal.yaml  spring_boot.yaml  sql_injection.yaml  ssrf.yaml  xss.yaml  xxe.yaml
sicario-cli/rules/javascript/: express_crypto_prototype.yaml  nextjs_auth.yaml  nosql_redos.yaml  redirect_typescript.yaml  sql_injection.yaml  ssrf_path_traversal_deserialization.yaml  xss.yaml
sicario-cli/rules/python/: command_injection.yaml  crypto.yaml  deserialization.yaml  django_misconfig.yaml  django_orm_injection.yaml  fastapi.yaml  flask_ssti.yaml  ldap_injection.yaml  logging_sensitive.yaml  mass_assignment.yaml  path_traversal.yaml  sql_injection.yaml  ssrf_redirect.yaml  xxe.yaml
sicario-cli/rules/rust/: crypto_deser_memory_concurrency.yaml  framework_info_leakage.yaml  sql_cmd_path.yaml
sicario-cli/src/: binary_portability_tests.rs  lib.rs  main.rs
sicario-cli/src/audit/: mod.rs  trace.rs
sicario-cli/src/auth/: auth_module.rs  auth_property_tests.rs  mod.rs  pkce.rs  preservation_property_tests.rs  token_store.rs
sicario-cli/src/baseline/: manager.rs  mod.rs
sicario-cli/src/benchmark/: mod.rs  runner.rs
sicario-cli/src/cache/: mod.rs  scan_cache.rs
sicario-cli/src/cli/: baseline.rs  benchmark.rs  cache.rs  config.rs  exit_code.rs  exit_code_property_tests.rs  fix.rs  hook.rs  link.rs  lsp.rs  mod.rs  rules.rs  scan.rs  suppressions.rs
sicario-cli/src/cloud/: exposure.rs  interfaces.rs  mod.rs  priority.rs  priority_property_tests.rs
sicario-cli/src/confidence/: mod.rs  scorer.rs
sicario-cli/src/config/: global_config.rs  mod.rs
sicario-cli/src/convex/: client.rs  mod.rs  ruleset.rs  telemetry.rs  telemetry_property_tests.rs
sicario-cli/src/diff/: diff_scanner.rs  mod.rs
sicario-cli/src/engine/: mod.rs  reachability.rs  sast_engine.rs  security_rule.rs  vulnerability.rs
sicario-cli/src/engine/sca/: ghsa_import.rs  known_vulnerability.rs  manifest_parser.rs  mod.rs  osv_import.rs  sca_property_tests.rs  vuln_db.rs
sicario-cli/src/hook/: mod.rs
sicario-cli/src/key_manager/: cloud_config.rs  config_file.rs  manager.rs  mod.rs
sicario-cli/src/lsp/: mod.rs
sicario-cli/src/mcp/: assistant_memory.rs  mcp_property_tests.rs  mod.rs  protocol.rs  security_guard.rs  server.rs
sicario-cli/src/onboarding/: detector.rs  mod.rs  onboarding_flow.rs  onboarding_property_tests.rs  rule_configurator.rs
sicario-cli/src/output/: branded.rs  diagnostics.rs  formatter.rs  mod.rs  sarif.rs
sicario-cli/src/parser/: exclusion_manager.rs  mod.rs  tree_sitter_engine.rs
sicario-cli/src/publish/: mod.rs  telemetry_client.rs  telemetry_property_tests.rs
sicario-cli/src/remediation/: backup_manager.rs  cerebras_client.rs  iteration_guard.rs  llm_client.rs  mod.rs  patch.rs  progress.rs  remediation_engine.rs  remediation_property_tests.rs  template_engine.rs  templates.rs
sicario-cli/src/reporting/: mod.rs  owasp_property_tests.rs  owasp_report.rs
sicario-cli/src/rule_harness/: harness.rs  mod.rs
sicario-cli/src/scanner/: mod.rs  secret_patterns.rs  secret_scanner.rs  suppression_parser.rs  verifiers.rs
sicario-cli/src/snippet/: extractor.rs  mod.rs  snippet_property_tests.rs
sicario-cli/src/suppression_learner/: mod.rs
sicario-cli/src/telemetry/: mod.rs
sicario-cli/src/tui/: app.rs  events.rs  message_passing_tests.rs  mod.rs  responsiveness_tests.rs  ui.rs  worker.rs
sicario-cli/src/verification/: mod.rs
sicario-cli/test-samples/: vulnerable.js  vulnerable.py
sicario-cli/test-samples/.sicario/: patch_history.json
sicario-cli/test-samples/.sicario/backups/20260419_215756_857388900/: vulnerable.py
sicario-cli/test-samples/.sicario/backups/20260419_215756_857388900/.sicario/: patch_history.json
sicario-cli/test-samples/.sicario/backups/20260419_215756_857388900/.sicario/backups/20260419_220119_549462100/: vulnerable.py
sicario-cli/test-samples/.sicario/cache/: vuln_cache.db
sicario-cli/test-samples/.sicario/reports/: owasp_report.json  owasp_report.md
test-trigger/: vulnerable-sample.js
vuln-sandbox/: README.md  smoke-test.sh
(+24 files in other folders)
