[workspace]
members = ["sicario-cli", "sicario-cloud"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sicario Team"]
license = "MIT"
repository = "https://github.com/EmmyCodes234/sicario-cli"

[workspace.dependencies]
# Tree-sitter parsing
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", features = ["native-tls"] }

# Parallelism
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Git integration
git2 = "0.18"

# File patterns and exclusions
ignore = "0.4"
globset = "0.4"

# Regex and pattern matching
regex = "1.10"

# Caching
lru = "0.12"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Keychain/credential storage
keyring = "2.3"

# Diff generation
similar = "2.4"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Property-based testing
proptest = "1.4"

# Temporary directories for testing
tempfile = "3.8"

# Base64 encoding
base64-url = "2.0"

# Random number generation
rand = "0.8"

# SHA-256 hashing
sha2 = "0.10"

# Semantic versioning
semver = { version = "1.0", features = ["serde"] }

# ZIP decompression
zip = "0.6"

# TOML parsing
toml = "0.8"

# Professional output
indicatif = "0.17"
owo-colors = "4.0"
comfy-table = "7.1"

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "string"] }
clap_complete = "4.5"

# LSP server
lsp-server = "0.7"
lsp-types = "0.95"

# System info (benchmarking)
sysinfo = "0.30"

# Diagnostic output
miette = { version = "7", features = ["fancy"] }
