[workspace]
members = ["sicario-cli"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Sicario Team"]
license = "FSL-1.1"
repository = "https://github.com/sicario-labs/sicario-cli"

[workspace.dependencies]
# Tree-sitter parsing
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
# tree-sitter-ruby and tree-sitter-php: no compatible crate at 0.20 API;
# Ruby/PHP syntax validation falls back to "unknown language" rejection path.

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots"] }

# Parallelism
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
# Use rustls-tls (pure Rust) instead of native-tls (OpenSSL) so cross-compilation
# via cargo-zigbuild works without a target sysroot.
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Git integration
# Disable SSH (pulls in libssh2-sys → openssl-sys) since the CLI only needs
# local repo inspection (status, log, diff), not remote SSH operations.
# vendored-libgit2 compiles libgit2 from source via Zig's clang for cross-compilation.
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }

# File patterns and exclusions
ignore = "0.4"
globset = "0.4"

# Regex and pattern matching
regex = "1.10"

# Caching
lru = "0.12"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Keychain/credential storage
keyring = "2.3"

# Diff generation
similar = "2.4"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Property-based testing
proptest = "1.4"

# Temporary directories for testing
tempfile = "3.8"

# Base64 encoding
base64-url = "2.0"

# Random number generation
rand = "0.8"

# SHA-256 hashing
sha2 = "0.10"

# Semantic versioning
semver = { version = "1.0", features = ["serde"] }

# ZIP decompression
zip = "0.6"

# TOML parsing
toml = "0.8"

# Professional output
indicatif = "0.17"
owo-colors = "4.0"
comfy-table = "7.1"

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "string"] }
clap_complete = "4.5"

# LSP server
lsp-server = "0.7"
lsp-types = "0.95"

# System info (benchmarking)
sysinfo = "0.30"

# Diagnostic output
miette = { version = "7", features = ["fancy"] }

# File system watching (for --watch mode)
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"

# Signal handling (for Ctrl+C in --watch mode)
ctrlc = { version = "3.4", features = ["termination"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Use .tar.gz for all platforms (required for npm installer)
windows-archive = ".tar.gz"
unix-archive = ".tar.gz"
npm-scope = "@sicario-labs"
# Allow our custom publish-npm job in the CI workflow
allow-dirty = ["ci"]
